fixed misalignment at least on firefox

--- a/front-end/src/app/modules/dashboard/header/header.component.less
+++ b/front-end/src/app/modules/dashboard/header/header.component.less
@@ -17,8 +17,8 @@ header {
             }
 
             .id {
-                -webkit-transition: width 0.8s ease-out;
-                transition: width 1s ease-out;
+                -webkit-transition: width 0.4s ease-out;
+                transition: width 0.4s ease-out;
                 height: 20px;
                 width: 200px;
                 font-weight: 400;
@@ -52,6 +52,7 @@ header {
                 margin-left: 30px;
                 position: relative;
                 color: rgba(240, 248, 255, 0.856);
+                font-family: 'Courier New', Courier, monospace;
         }
 
         a:hover {
