--- a/front-end/src/app/modules/dashboard/home/home.component.less
+++ b/front-end/src/app/modules/dashboard/home/home.component.less
@@ -15,18 +15,26 @@
     //     border-radius: 40px;
     //     box-shadow: 0 10px 15px 0 rgba(0, 0, 0, .2);
     // }
+    .page-header{
+        top: 0;
+        position: absolute;
+        margin-top: 10vh;
+        margin-left: 25px;
+        font-size: 32px;
+        color: rgb(35, 46, 46);
+        font-family: 'Courier New', Courier, monospace;
+        // font-weight: bold;
+    }
 
     .buttons {
         margin: auto 0;
         text-align: center;
         padding-top: 20px;
-
-
         .action {
             margin: 0px 16px;
             width: 10%;
             -webkit-box-align: center;
-            align-items: center;
+            // align-items: center;
             border: 0px;
             border-radius: 16px;
             box-shadow: 0 10px 15px 0 rgba(0, 0, 0, .2);
@@ -43,7 +51,7 @@
             outline: 0px;
             transition: background-color 0.2s ease 0s;
             height: 48px;
-            padding: 0px 24px;
+            padding: 12px 24px 6px;
             background-color: rgb(31, 199, 212);
             color: white;
         }
